refactor: resolve SonarQube code smells by converting Stream collection to toList() and using assertThrows